// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: MediaObject MediaPosition renders 1`] = `
<Fragment>
  <h2
    id="media-position"
  >
    Media position
  </h2>
  <p>
    Use the 
    <CodeTags
      code=".media-right"
      type="secondary"
    />
     class to align the media content to the right.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <MediaObject
      heading="Bob Corlsan"
      imgUrl="https://via.placeholder.com/48x48"
      mediaRight={true}
      text="bob.corlsan@TESTBRAND.com"
    />
    <MediaObject
      heading="Bob Corlsan"
      icon="account_circle"
      mediaRight={true}
      text="bob.corlsan@TESTBRAND.com"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: MediaObject Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Use the 
    <CodeTags
      code=".media"
      type="secondary"
    />
     class on an object to style it as a small container that feature a left- or right-aligned image/icon alongside textual content.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <MediaObject
      heading="Bob Corlsan"
      imgUrl="https://via.placeholder.com/48x48"
      text="bob.corlsan@TESTBRAND.com"
    />
    <MediaObject
      heading="Bob Corlsan"
      icon="account_circle"
      text="bob.corlsan@TESTBRAND.com"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: MediaObject Sizes renders 1`] = `
<Fragment>
  <h2
    id="sizes"
  >
    Sizes
  </h2>
  <p>
    Use 
    <CodeTags
      code=".media-sm"
      type="secondary"
    />
     or 
    <CodeTags
      code=".media-lg"
      type="secondary"
    />
     to modify the size of your media objects.
  </p>
  <h3>
    Small
  </h3>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <MediaObject
      heading="Bob Corlsan"
      imgUrl="https://via.placeholder.com/40x40"
      size="sm"
      text="bob.corlsan@TESTBRAND.com"
    />
    <MediaObject
      heading="Bob Corlsan"
      icon="account_circle"
      size="sm"
      text="bob.corlsan@TESTBRAND.com"
    />
  </ComponentPreview>
  <h3>
    Large
  </h3>
  <ComponentPreview
    codeFigure={true}
    language="html"
    previewMinHeight={250}
    showCasePanel={true}
  >
    <MediaObject
      heading="Bob Corlsan"
      imgUrl="https://via.placeholder.com/56x56"
      size="lg"
      text="bob.corlsan@TESTBRAND.com"
    />
    <MediaObject
      heading="Bob Corlsan"
      icon="account_circle"
      size="lg"
      text="bob.corlsan@TESTBRAND.com"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: MediaObject renders 1`] = `
<DocContainer>
  <p
    className="lead"
  >
    Use media objects to showcase basic user information with text and a small image element or an icon.
  </p>
  <Overview />
  <Sizes />
  <MediaPosition />
</DocContainer>
`;
